@@ -20,6 +20,10 @@
 
 	* lisp/sawfish/gtk/widgets/simple-dialog.jl: better wmclass
 
+	* lisp/sawfish/cfg/widgets/command.jl
+	* lisp/sawfish/gtk/widget.jl: removed option-index (now in
+	rep.util.misc) and command-index (exactly the same as option-index)
+
 2011-06-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* configure.in: bump minimum librep to 0.92.1, new funcs required by
 	SawfishConfig
